[gd_scene load_steps=12 format=3 uid="uid://bpcmjklxbqao6"]

[ext_resource type="PackedScene" uid="uid://bwdlfrvjkrqns" path="res://scenes/level_missions.tscn" id="1_brwk3"]
[ext_resource type="Script" uid="uid://7forkhnmbqy5" path="res://scripts/tela_jogo_scripts/cerrado.gd" id="1_nodpn"]
[ext_resource type="PackedScene" uid="uid://clg77k8o1iw1a" path="res://dialog_scenes/level_lobo.tscn" id="2_7vt0m"]
[ext_resource type="Script" uid="uid://t13aiph8r3xx" path="res://scripts/Mission.gd" id="2_nodpn"]
[ext_resource type="Resource" uid="uid://cy6du3d22hixt" path="res://Resources/missoes_cerrado/Arvores_frutiferas.tres" id="3_7vt0m"]
[ext_resource type="Resource" uid="uid://dokx6ijaby4qu" path="res://Resources/missoes_cerrado/fontes_de_agua.tres" id="4_m2ohc"]
[ext_resource type="Resource" uid="uid://dhyg1vtodbrmb" path="res://Resources/missoes_cerrado/mosaico_do_cerrado.tres" id="5_dv37q"]
[ext_resource type="PackedScene" uid="uid://dqu0j2hrsrtt2" path="res://scenes/progressbar_missoes.tscn" id="6_cdb7f"]
[ext_resource type="PackedScene" uid="uid://2ubsbgso1mxg" path="res://scenes/core_gameplay/game_main.tscn" id="7_q61hs"]

[sub_resource type="Gradient" id="Gradient_7vt0m"]
colors = PackedColorArray(0.000235263, 0.199265, 0.660163, 1, 0.192884, 0.538019, 0.951966, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m2ohc"]
gradient = SubResource("Gradient_7vt0m")
fill_to = Vector2(1, 1)

[node name="Cerrado" type="Node2D"]
script = ExtResource("1_nodpn")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -34429.0
offset_top = -22846.0
offset_right = 30912.0
offset_bottom = 27554.0
texture = SubResource("GradientTexture2D_m2ohc")

[node name="Level_lobo" parent="." instance=ExtResource("2_7vt0m")]

[node name="LevelMissions" parent="." instance=ExtResource("1_brwk3")]
missions = Array[ExtResource("2_nodpn")]([ExtResource("3_7vt0m"), ExtResource("4_m2ohc"), ExtResource("5_dv37q")])

[node name="progressbar_missoes" parent="." instance=ExtResource("6_cdb7f")]

[node name="GameMain" parent="." instance=ExtResource("7_q61hs")]

[connection signal="missions_complete" from="progressbar_missoes" to="." method="_on_progressbar_missoes_missions_complete"]
